--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
            <main>
             <div class="content">
                 <h1>Portfolio</h1>
-                <ul id="PG.2">
+                <ul id="portfolio">
                 </ul>
             </div>
         </main>
@@ -107,6 +107,8 @@
         </nav>
       
       </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script id="portfolioScript">$(document).ready(function() {$.getJSON('projects/projects.json').then(function(data) { data.projects.forEach(function(project){ $('#portfolio').append('<li><a href="projects/' + project.name + '/">' + project.title + ' : ' + project.description + '</a></li>'); }); }); });</script>
     </body>
     <div class="sidebar">
         <img src="https://yt3.ggpht.com/-0N5lgXDj8U8/AAAAAAAAAAI/AAAAAAAAAAA/-UIDweYNoKI/s100-mo-c-c0xffffffff-rj-k-no/photo.jpg">
